--- a/presentation.tex
+++ b/presentation.tex
@@ -45,8 +45,17 @@
       \item ($a$)$\phi$ and [$a$]$\psi$, if $a \in Act$ is an action and $\phi$ is a formual in  $\mathcal{F}$
       \item $\mu X. \phi$ and $v X. \phi$, if $X \in Var$ is a variable and $\phi \in \mathcal{F}$ is a formula.
     \end{itemize}
-
   \end{frame}
+
+  \begin{frame}{Labelled Trainsiton Systems}
+    Given a labelled transition system $(S, R, V)$: \\[12pt]
+    \begin{itemize}
+      \item $S$ is a set of states \\
+      \item $R$ maps to each label $a$ a binary relation on $S$ \\
+      \item $V:P\rightarrow 2^{S}$, maps to each proposition $p \in P$ the set of states where the proposition is true
+    \end{itemize}
+  \end{frame}
+
 
   \begin{frame}{Diamond \& Box Modalities}
     \resizebox{\textwidth}{!}{
