Change theme and font.

--- a/presentation.tex
+++ b/presentation.tex
@@ -2,10 +2,13 @@
 %
 \documentclass{beamer}
 
-\usetheme{Dresden}
+\usetheme{metropolis}
 
 \usepackage{fontspec}
 \defaultfontfeatures{Ligatures=TeX}
+
+\usefonttheme{professionalfonts}
+\usepackage[familydefault,light]{Chivo}
 
 \usepackage{upgreek}
 \usepackage{setspace}
@@ -20,7 +23,8 @@
   pdfauthor  = {Michael Kaltschmid \& Markus Reiter}
 }
 
-\title{Process Calculi for Concurrency}
+\title{Process Calculi}
+\subtitle{for Concurrency}
 \author{Michael Kaltschmid \& Markus Reiter}
 \date{}
 
