Add two introduction slides.

--- a/presentation.tex
+++ b/presentation.tex
@@ -40,6 +40,27 @@
     \end{itemize}
   \end{frame}
 
+  \begin{frame}{What is a Process Calculus?}
+    \begin{itemize}
+      \item approach for formally modelling concurrent systems
+      \item tool for high-level description of interactions, communications and synchronizations between processes
+      \item provides algebraic laws to allow analyzing and transforming process descriptions
+      \item permits formal reasoning about equivalences between processes (e.g., using bisimulation)
+    \end{itemize}
+  \end{frame}
+
+  \begin{frame}{Process Calculi}
+    \begin{itemize}
+      \item ACP
+      \item CCS
+      \item CSP
+      \item Join-Calculus
+      \item \textbf{µ-Calculus}
+      \item PEPA
+      \item π-Calculus
+    \end{itemize}
+  \end{frame}
+
   \begin{frame}{Syntax}
     The set of µ-calculus formulas, $\mathcal{F}$ is the smallest set containing: \\[12pt]
     \begin{itemize}
