--- a/presentation.tex
+++ b/presentation.tex
@@ -33,8 +33,7 @@
 
   \begin{frame}{Outline}
     \begin{itemize}
-      \item $\upmu$-Calculus
-      \item $\mu$-Calculus
+      \item What is a Process Calculus?
       \item µ-Calculus
       \item mCRL2
     \end{itemize}
