--- a/presentation.tex
+++ b/presentation.tex
@@ -65,7 +65,7 @@
     \end{itemize}
   \end{frame}
 
-  \begin{frame}{Labelled Trainsiton Systems}
+  \begin{frame}{Labelled Transition Systems}
     LTS is a tuple $(S, A, \to,s_0>)$ where: \\[12pt]
     \begin{itemize}
       \item $S$ is a set of states \\
@@ -75,7 +75,7 @@
     \end{itemize}
   \end{frame}
 
-  \begin{frame}{Hennessy-Milner logic}
+  \begin{frame}{Hennessy-Milner Logic}
     \begin{align*}
       af ::= \alpha\ |\ true\ |\ false\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi
     \end{align*}
@@ -86,7 +86,7 @@
     \end{itemize}
   \end{frame}
 
-  \begin{frame}{Fixed point modalities}
+  \begin{frame}{Fixed Point Modalities}
     By extending the Hennessy-Milner logic with fixed points we have:
     \resizebox{ \textwidth}{!} {
       \begin{minipage}{\textwidth}
