Highlight extension to Hennessy-Milner logic.

--- a/presentation.tex
+++ b/presentation.tex
@@ -91,7 +91,7 @@
     \resizebox{ \textwidth}{!} {
       \begin{minipage}{\textwidth}
         \begin{align*}
-          af ::= \alpha\ |\ true\ |\ false\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi\ |\ \mu X. \phi \ |\ vX. \phi \ |\ X.
+          af ::= \alpha\ |\ true\ |\ false\ |\ \neg \phi\ |\ \phi \land \psi\ |\ \phi \lor \psi\ |\ \phi \to \psi\ |\ \langle a \rangle \phi \ |\ [a]\phi\ |\ \color{green} \mu X. \phi \ |\ vX. \phi \ |\ X.
         \end{align*}
       \end{minipage}
     }
