--- a/presentation.tex
+++ b/presentation.tex
@@ -105,7 +105,7 @@
     \begin{itemize}
       \item $S$ is a set of states \\
       \item $A$ is a set of actions \\
-      \item $\to \subseteq S \times A \times S$ is a transition relation \\
+      \item $\to\ \subseteq S \times A \times S$ is a transition relation \\
       \item $s_0 \in S$ is the initial state \\
     \end{itemize}
   \end{frame}
