--- a/presentation.tex
+++ b/presentation.tex
@@ -302,7 +302,7 @@
 
     \begin{exampleblock}{Example}
       \begin{align*}
-        [true^*\cdot send]\langle true^* \cdot receive \rangle false
+        [true^*\cdot send]\langle true^* \cdot receive \rangle true
       \end{align*}
 
       Every time a message is sent, it can eventually be received.
