--- a/presentation.tex
+++ b/presentation.tex
@@ -18,6 +18,8 @@
 
 \definecolor{red}{RGB}{200,50,0}
 \definecolor{green}{RGB}{0,150,60}
+\definecolor{lightWhite}{RGB}{249,249,249}
+
 \newcommand*{\red}{\color{red}}
 \newcommand*{\green}{\color{green}}
 
@@ -111,6 +113,7 @@
   \end{frame}
 
   \begin{frame}{Bisimulation}
+    Bisumularity of two coffee machines \\[24pt]
     \begin{tabular}{cc}
       \begin{minipage}{.5\linewidth}
         \centering
@@ -121,12 +124,12 @@
           \node[vertex] (P4) at (0, 0) {$P4$};
           \node[vertex] (P5) at (3.2, 0) {$P5$};
 
-          \path[->] (P1) edge  node[left] {$coin$} (P2);
-          \path[->] (P1) edge  node[right] {$coin$} (P3);
-          \path[->] (P2) edge  node[left] {$get-tea$} (P4);
-          \path[->] (P3) edge  node[right] {$get-coffee$} (P5);
-          \path[->] (P4) edge [bend right=25]  node[left] {$tea$} (P1);
-          \path[->] (P5) edge [bend left=25]  node[right] {$coffee$} (P1);
+          \path[->] (P1) edge  node[midway, fill=lightWhite] {$coin$} (P2);
+          \path[->] (P1) edge  node[midway, fill=lightWhite] {$coin$} (P3);
+          \path[->] (P2) edge  node[midway, fill=lightWhite] {$get-tea$} (P4);
+          \path[->] (P3) edge  node[midway, fill=lightWhite] {$get-coffee$} (P5);
+          \path[->] (P4) edge [bend right=25] node[midway, fill=lightWhite] {$tea$} (P1);
+          \path[->] (P5) edge [bend left=25]  node[midway, fill=lightWhite] {$coffee$} (P1);
         \end{tikzpicture}
       \end{minipage}
       \begin{minipage}{.5\linewidth}
@@ -137,11 +140,11 @@
           \node[vertex] (Q3) at (3.2, 0) {$Q3$};
           \node[vertex] (Q4) at (0, 0) {$Q4$};;
 
-          \path[->] (Q1) edge  node[left] {$coin$} (Q2);
-          \path[->] (Q2) edge  node[right] {$get-coffee$} (Q3);
-          \path[->] (Q2) edge   node[left] {$get-tea$} (Q4);
-          \path[->] (Q3) edge  [bend right=40] node[right] {$coffee$} (Q1);
-          \path[->] (Q4) edge   [bend left=40] node[left] {$tea$} (Q1);
+          \path[->] (Q1) edge  node[midway, fill=lightWhite] {$coin$} (Q2);
+          \path[->] (Q2) edge  node[midway, anchor=center, fill=lightWhite] {$get-coffee$} (Q3);
+          \path[->] (Q2) edge  node[midway, anchor=center, fill=lightWhite] {$get-tea$} (Q4);
+          \path[->] (Q3) edge  [bend right=40] node[midway, anchor=center, fill=lightWhite] {$coffee$} (Q1);
+          \path[->] (Q4) edge   [bend left=40] node[midway, fill=lightWhite] {$tea$} (Q1);
         \end{tikzpicture}
       \end{minipage}
     \end{tabular}
