Extend Fixed Point Modalities.

--- a/presentation.tex
+++ b/presentation.tex
@@ -183,9 +183,23 @@
       \end{minipage}
     }
     \begin{itemize}
+      \item $X$ is a set of states
       \item $\mu X. \phi$ is the minimal fixed point
       \item $vX. \phi$ is the maximal fixed point
+      \item minimal and maximal fixed point operators are each oter's duals
     \end{itemize}
+    \begin{tabular}{cc}
+      \begin{minipage}{.47\linewidth}
+        \begin{align*}
+          \neg vX. \phi = \mu X. \neg \phi
+        \end{align*}
+      \end{minipage}
+      \begin{minipage}{.47\linewidth}
+        \begin{align*}
+          \neg \mu X. \phi = vX. \neg \phi
+        \end{align*}
+      \end{minipage}
+    \end{tabular}
   \end{frame}
 
   \begin{frame}{Diamond \& Box Modalities}
