Remove redundant `\ttfamily`.

--- a/presentation.tex
+++ b/presentation.tex
@@ -22,7 +22,7 @@
   otherkeywords={+, .},
   keywordstyle=\color{green},
   comment=[l]{\%},
-  commentstyle=\color[rgb]{0.6,0.6,0.6}\ttfamily\itshape,
+  commentstyle=\color[rgb]{0.6,0.6,0.6}\itshape,
 }
 
 \usepackage{tkz-graph}
