Add obligatory live demo slide.

--- a/presentation.tex
+++ b/presentation.tex
@@ -396,4 +396,8 @@ proc P = a . b . c;           % Concatenation
 init P;
     \end{lstlisting}
   \end{frame}
+
+  \begin{frame}[standout]
+    mCRL2 Live Demo
+  \end{frame}
 \end{document}
