Add basic information about mCRL2.

--- a/presentation.tex
+++ b/presentation.tex
@@ -382,6 +382,15 @@
     \end{tabular}
   \end{frame}
 
+  \begin{frame}{mCRL2}
+    \begin{itemize}
+      \item formal specification language for processes
+      \item based on ACP
+      \item uses µ-Calculus for model checking
+      \item used for specifying and analysing behaviour of distributed systems and protocols
+    \end{itemize}
+  \end{frame}
+
   \begin{frame}[fragile]{mCRL2: Syntax}
     \begin{lstlisting}[language=mCRL2]
 % Actions
